infra/k8s/client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template: 
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: blog/client
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: client-service
spec: 
  selector: 
    app: client
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 5173
      targetPort: 5173
