infra/k8s/comments-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template: 
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: blog/comments
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: comments-service
spec: 
  selector: 
    app: comments
  type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 8081
      targetPort: 8081
