infra/k8s/event-bus-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template: 
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: blog/event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: event-bus-service
spec: 
  selector: 
    app: event-bus
  type: ClusterIP
  ports: 
    - name: event-bus
      protocol: TCP
      port: 8083
      targetPort: 8083
