infra/k8s/moderation.deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: moderation-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template: 
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: blog/moderation
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: moderation-service
spec: 
  selector: 
    app: moderation
  type: ClusterIP
  ports: 
    - name: moderation
      protocol: TCP
      port: 8084
      targetPort: 8084
