infra/k8s/posts-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template: 
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: blog/posts
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: posts-clusterip-service
spec: 
  selector: 
    app: posts
  type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      port: 8080
      targetPort: 8080
