infra/k8s/posts-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: posts-service
spec:
  type: NodePort
  selector: 
    app: posts
  ports:
     - name: posts
       protocol: TCP
       port: 8080
       targetPort: 8080
