infra/k8s/query-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template: 
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: blog/query
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service 
metadata: 
  name: query-service
spec: 
  selector: 
    app: query
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 8082
      targetPort: 8082
