infra/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: posts.com
      http: 
        paths: 
          - path: /posts/create
            pathType: Prefix
            backend:
              service: 
                name: posts-clusterip-service
                port: 
                  number: 8080              
          - path: /posts
            pathType: Prefix
            backend:
              service: 
                name: query-service
                port: 
                  number: 8082              
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service: 
                name: comments-service
                port: 
                  number: 8081              
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service: 
                name: client-service
                port: 
                  number: 5173
